<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:backgroundTint="#FEFBF6"
    android:background="@drawable/btn_bg"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/idtvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/add_item_to_list"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_baseline_local_grocery_store_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.797"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idtvHeading"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="10dp"
                android:padding="5dp"

                app:hintTextColor="@color/black"
                app:counterTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtitemname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_name"
                    android:inputType="text"
                    android:textColorHint="#546E7A"
                    android:textSize="14sp"
                    app:counterTextColor="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="10dp"
                android:padding="5dp"

                app:hintTextColor="@color/black"
                app:counterTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtitemquantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_quantity_in_kg"
                    android:inputType="numberDecimal"
                    android:textColorHint="#546E7A"
                    android:textSize="14sp"
                    app:counterTextColor="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="10dp"
                android:padding="5dp"

                app:hintTextColor="@color/black"
                app:counterTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtitemprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_price_kg"
                    android:inputType="numberDecimal"
                    android:textColorHint="#546E7A"
                    android:textSize="14sp"
                    app:counterTextColor="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:weightSum="2">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:id="@+id/idbtncancel"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_bg"
                    android:textAllCaps="false"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:padding="5dp"
                    android:id="@+id/idbtnadd"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_bg"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>